--- a/app/views/forms/housing/CBLaddress2-loop.html
+++ b/app/views/forms/housing/CBLaddress2-loop.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
       <p class="govuk-body-l">Enter the addresses you lived at for the last 5 years. Start with the one you are living in at the moment.</p>
       <h2 class="govuk-heading-m">
