--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Apply online for Housing
+          Apply online for council housing
       </h1>
       <h2 class="govuk-heading-m">
         We need to know about the bedrooms in your current house.
@@ -171,7 +171,7 @@
             name: "use-less",
             fieldset: {
               legend: {
-                text: "Can your household only use some of these rooms?",
+                text: "Can your household only use some of these bedrooms?",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--m"
               }
