--- a/app/views/forms/housing/CBLconnection-ER.html
+++ b/app/views/forms/housing/CBLconnection-ER.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
 
 {% from "radios/macro.njk" import govukRadios %}
@@ -34,7 +34,7 @@
   name: "connection-details",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Tell us their name and address including postcode"
+    text: "Tell us the name of this relative and their address including postcode"
   }
 }) }}
 {% endset -%}
@@ -68,7 +68,7 @@
     },
     {
       value: "support",
-      text: "Support for a from a relative who lives in area"
+      text: "Support for or from a relative who lives in area"
     },
     {
       value: "social",
@@ -134,7 +134,7 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>can be coded</li>
+      <li>can be coded - one change for support for a or from a relative</li>
       <li>extra textbox for other reason, and relative live in area / different lablel for each though </li>
       <li>we need at list one checked, and if open a text box, then it needs not to be empty</li>
       <li>Select at least one - Give details - Enter name and address (to be confirmed by Sharon)</li>
