--- a/app/views/forms/housing/CBLcurrent.html
+++ b/app/views/forms/housing/CBLcurrent.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
 
 {% from "checkboxes/macro.njk" import govukCheckboxes %}
@@ -48,7 +48,7 @@
     },
     {
       value: "other-council",
-      text: "Tenant of another council or housing"
+      text: "Tenant of another council or housing association"
     },
     {
       value: "property-provided",
@@ -100,6 +100,8 @@
       <li>extra textbox for Different living situation</li>
       <li>we need at list one checked, and if open a text box, then it needs not to be empty</li>
       <li>Select at least one - Give details (for Different living situation) (to be confirmed by Sharon)</li>
+      <li>word association added after housing in 2nd checkbox
+      </li>
     </ul>
 </div>
 
