--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -10,14 +10,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for Housing
+            Apply online for council housing
         </h1>
         <h2 class="govuk-heading-m">
             We need to know who will be living with you
           </h2>
-          <p>In the following screens, only add children if they live permanently with you.</p>
-          <p>Any children from a previous relation who stay regularly overnight will be added later. <em>(this content will need to match what we put on the relevant screen)</em></p>
-<br><br>
+          <p class="govuk-!-margin-bottom-6">In the next questions, only add children who live with you all the time. You can add children later who live with you sometimes. </p>
+         
           <form class="form" method="post">
           {% from "radios/macro.njk" import govukRadios %}
 
@@ -52,7 +51,7 @@
 <div class="content-notes-box">
   <h3 class="govuk-heading-s">Content notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-    <li><strong>Content for this page is only a place holder, it will be re-worded before testing</strong></li>
+    <li><strong>Content to be tested</strong></li>
     <li>Usability testing will help to see what is needed</li>
     <li>content about other children on this page should match the relevant screen later</li>
   </ul>
@@ -60,7 +59,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>we expect the user to add everyone who will be living with them but the kids from a previous relation who regularly stay overnight (this is du to the process they follow)</li>
+      <li>we expect the user to add everyone who will be living with them but the kids from a previous relation who regularly stay overnight (this is due to the process they follow)</li>
     </ul>
 </div>
 <div class="IT-notes-box">
