--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
 
 {% from "radios/macro.njk" import govukRadios %}
@@ -32,13 +32,13 @@
   name: "is-joint",
   fieldset: {
     legend: {
-      text: "Is there a joint applicant?",
+      text: "Is anyone a joint applicant?",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
   },
   hint: {
-    text: "Joint applicant needs to be 16 or over."
+    text: "There cannot be more than one. The joint applicant must be 16 or over"
   },
   items: [
     {
@@ -65,11 +65,11 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>The wording would need to be checked by Sharon but agreed by Housing</p>
+   <p>The wording is from Sharon - pattern agreed by Housing</p>
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
-   <p>new page</p>
+   <p>new page - <strong>content has changed</strong></p>
    <p>validation will be needed (if yes, textbox can't be empty) but will need the wording to be agreed before I can provide an error message</p>
 </div>
 {% endblock %}
