--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
       <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
@@ -20,7 +20,7 @@
         name: "other-children",
         fieldset: {
           legend: {
-            text: "Do you have children from a previous relation who stay regularly overnight?",
+            text: "Do you have a child who spends part of their time living with you and part of their time living with another carer?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -46,8 +46,8 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>The wording will probably be changed by Sharon but for now, it's approved by Housing- to be confirm this week though</p>
-  <p>should we had guidance about the age of the child? (16 - 18?)</p>
+   <p>Content from Sharon - to review with Housing- to be confirm this week </p>
+  <p>should we add guidance about the age of the child? (16 - 18?)</p>
   <p>if they say yes, then they will <strong>add children like we added "person" up to 5 </strong> and again we will have a box at the bottom of the 5th child, so they can add any extra children</p>
   <p>They are only allowed an extra room max normally in the process</p>
 </div>
