--- a/app/views/forms/housing/CBLrecourse.html
+++ b/app/views/forms/housing/CBLrecourse.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Apply online for Housing
+          Apply online for council housing
       </h1>
       <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
@@ -57,6 +57,7 @@
   <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
     <li>Guidance might be needed.</li>
+    <li><strong>orignal question was: Do you have any restriction on your access to public funds</strong></li>
     <li>If guidance is needed we could maybe add it under a "I don't know" radio button? (to be discussed further with Housing)</li>
   </ul>
 </div>
