--- a/app/views/forms/housing/CBLadd-person1-loop.html
+++ b/app/views/forms/housing/CBLadd-person1-loop.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
       <p class="govuk-body-l">Enter each person who will be living with you.</p>
       <h2 class="govuk-heading-m">
@@ -157,6 +157,9 @@
     </form>
 
     </div>
+</div>
+<div class="alt-notes-box">
+<p><a href="/forms/housing/CBLadd-person.html">Try an alternative</a></p>
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
