--- a/app/views/forms/housing/CBLadd-person5-loop.html
+++ b/app/views/forms/housing/CBLadd-person5-loop.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
       <p class="govuk-body-l">Enter each person who will be living with you.</p>
       <h2 class="govuk-heading-m">
@@ -208,6 +208,7 @@
         value: data['relationship5'],
         classes: "govuk-input--width-20"
       }) }}
+
 
       {% from "button/macro.njk" import govukButton %}
       <br>
