--- a/app/views/forms/housing/CBLdob.html
+++ b/app/views/forms/housing/CBLdob.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for Housing
+            Apply online for council housing
         </h1>
         <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
