--- a/app/views/forms/housing/CBLlegal.html
+++ b/app/views/forms/housing/CBLlegal.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for Housing
+        Apply online for council housing
       </h1>
       <h2 class="govuk-heading-m">
           Legal action
