add phone number

--- a/app/views/forms/housing/CBLout.html
+++ b/app/views/forms/housing/CBLout.html
@@ -13,7 +13,11 @@
           Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-      <p>You need to contact our Housing Advice and Homelessness Team (contact details to follow)</p>
+      <p>You need to contact our Housing Advice and Homelessness Team</p>
+      <ul class="govuk-list">
+          <li>Phone: 0141 577 3002</li>
+          <li>Email: <a href="mailto:housingadvice@eastrenfrewshire.gov.uk">housingadvice@eastrenfrewshire.gov.uk</a></li>
+      </ul>
     </div>
 </div>
 <div class="design-notes-box">
