--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
         Apply online for council housing
       </h1>
@@ -39,7 +39,7 @@
       }) }}
  
 
-      <h2 class="govuk-heading-m govuk-!-margin-top-6">Related information </h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-3">Related information </h2>
       <ul class="govuk-list">
         <li><a href="" target="_blank">What happen next</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/article/1628/Homelessness" target="_blank">Homelessness</a></li>
@@ -47,6 +47,12 @@
         <li><a href="https://www.eastrenfrewshire.gov.uk/sheltered-housing" target="_blank">Sheltered housing</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/about-housing" target="_blank">About housing services</a></li>
         <li><a href="https://www.eastrenfrewshire.gov.uk/article/9717/How-we-allocate-our-council-houses" target="_blank">How we allocate our council houses</a></li>
+        </ul>
+
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Contact</h2>
+        <ul class="govuk-list">
+        <li>Phone: 0141 577 3002</li>
+        <li>Email: <a href="mailto:housingadvice@eastrenfrewshire.gov.uk">housingadvice@eastrenfrewshire.gov.uk</a></li>
         </ul>
 
       <p class="govuk-!-margin-bottom-9 govuk-!-margin-top-9">
